--- a/gif-chat/views/index.html
+++ b/gif-chat/views/index.html
@@ -7,14 +7,13 @@
     <body>
         <div> F12를 눌러 console 탭과 network 탭을 확인하세요</div>
         <script>
-            const webSocket = new WebSocket("ws://localhost:8005");
-            webSocket.onopen = function() {
-                console.log('connect');
-            };
-            webSocket.onmessage = function (event){
-                console.log(event.data);
-                webSocket.send('클라이언트에서 서버로 답장을 보냄');
-            };
+            const socket = io.connect('http://localhost:8005', {
+                path : '/socket.io',
+            });
+            socket.on('news', function (data) {
+                console.log(data);
+                socket.emit('reply', 'Hello Node.JS');
+            })
         </script>
     </body>
 </html>
